add test content

--- a/_posts/2019-05-24-test.md
+++ b/_posts/2019-05-24-test.md
@@ -1,17 +1,16 @@
 ---
-title:  Test Database
+title:  A Scalable Video Coding Dataset and Toolchain for Dynamic Adaptive Streaming over HTTP
 excerpt: Test Database
-author: Test Author
+author: Alpen-Adria-Universität Klagenfurt
+contact_name: "Christian Kreuzberger"
+contact_email: christian.kreuzberger@itec.aau.at
 license: For research purposes only
-tags: foo bar
+tags: audio video
 category: "Test Databases"
-external_link: https://example.com
-direct_download_link: https://example.com
+external_link: http://concert.itec.aau.at/SVCDataset/
+references:
+    KPH15: C. Kreuzberger, D. Posch, H. Hellwagner. A Scalable Video Coding Dataset and Toolchain for Dynamic Adaptive Streaming over HTTP, Proceedings of ACM MMSys '15, Portland, Oregon, March 18-20, 2015.
+citation: Use of the datasets in published work should be acknowledged by a full citation to the authors' papers KPH15 at the MMSys conference (Proceedings of ACM MMSys '15, Portland, Oregon, March 18-20, 2015).
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+With video streaming becoming more and more popular, the number of devices that are capable of streaming videos over the Internet is growing. This leads to a heterogeneous device landscape with varying demands. Dynamic Adaptive Streaming over HTTP (DASH) offers an elegant solution to these demands. Smart adaptation logics are able to adjust the clients' streaming quality according to several (local) parameters. Recent research indicated benefits of blending Scalable Video Coding (SVC) with DASH, especially considering Future Internet architectures. However, except for the DASH Dataset with a single SVC encoded video, no other datasets are publicly available. The contribution of this paper is two-fold. First, a DASH/SVC dataset, containing multiple videos at varying bitrates and spatial resolutions including 1080p, is presented. Second, a toolchain for multiplexing SVC encoded videos is provided, therefore making our results reproducible and allowing researchers to generate their own datasets.
