chore: udpate jekyll, ruby, issue template

--- a/_posts/2023-03-09-cvqad.md
+++ b/_posts/2023-03-09-cvqad.md
@@ -1,7 +1,8 @@
 ---
 title: CVQAD (Compressed Video Quality Assessment Dataset)
 database: CVQAD (Compressed Video Quality Assessment Dataset)
-categories: Video
+categories:
+- video
 excerpt: 1,022 compressed videos (including UGC), 32 encoders of 5 compression standards (H.265/HEVC, H.266/VVC, AV1, H.264/AVC, and VP9), 3 target bitrates (1,000 kbps, 2,000 kbps, and 4,000 kbps). 
 author: MSU Graphics and Media Lab / A. Antsiferova, S. Lavrushkin, M. Smirnov, A. Gushchin, D. Vatolin, and D. Kulikov
 partner: false
