fix broken links

--- a/_posts/2020-01-01-tum_1080p25_data_set.md
+++ b/_posts/2020-01-01-tum_1080p25_data_set.md
@@ -9,7 +9,7 @@ contact_name: Christian Keimel (christian.keimel@tum.de)
 database: TUM 1080p25 Data Set
 deprecated: true
 excerpt: ''
-external_link: http://www.ldv.ei.tum.de/en/research/videolab/data-sets-downloads/tum-1080p25-data-set/
+external_link: https://www.ce.cit.tum.de/en/ldv/research/videolab/data-sets-downloads/tum-1080p25-data-set/
 hrc: 12
 license: The TUM 1080p25 Data Set is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike
   3.0 Germany License (http://creativecommons.org/licenses/by-nc-sa/3.0/de/deed.en).
