--- a/_posts/2025-12-15-avt_360_8k.md
+++ b/_posts/2025-12-15-avt_360_8k.md
@@ -26,4 +26,4 @@ The dataset includes source videos encoded with the visually lossless ProRes 422
 
 A subjective study was conducted with 30 participants to evaluate immersion, visual comfort, and exploration behavior for both stereoscopic and non-stereoscopic 360° videos. Participants watched HEVC encoded versions and rated the videos regarding presence, visual comfort, and quality. The key finding indicates that non-stereoscopic video viewing leads to slightly better presence, visual comfort, and quality ratings compared to stereoscopic variants, as stereoscopic versions exhibited visual artifacts that potentially degraded quality. Exploration behavior remained similar across both formats.
 
-This work was funded by the Deutsche Forschungsgemeinschaft (DFG) as part of the ECoClass-VR project (DFG-444697733). The research contributes to understanding the trade-offs between stereoscopic depth cues and potential quality degradation in 360° video content, informing recommendations for immersive video production and streaming applications. The paper was presented at the 2023 IEEE International Symposium on Multimedia in Laguna Hills, CA, and has been cited in subsequent research on immersive video quality assessment.
+This work was funded by the Deutsche Forschungsgemeinschaft (DFG) as part of the ECoClass-VR project (DFG-444697733).
